<resources>
    <string name="app_name">Ajib Onboarding</string>
    <string name="get_started_title">Welcome to\n Arban jordan Investment Bank - AJIB</string>
    <string name="terms_text">Before getting started, please\n make sure:</string>
    <string name="you_have_a_jordanion_national_id">You have a jordanion national ID</string>
    <string name="throughout_this_process_your_information_will_be_saved_and_secured_with_aiib">Throughout this process,your information\n will be saved and secured with AIIB</string>
    <string name="what_is_your_mobile_number">What is your mobile number?</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="a_verification_code_was_sent_to_your_n_mobile_number_999">A verification code was sent to your\n mobile number: *******999</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="resend_verification"><u>Resend verification code</u></string>
    <string name="please_scroll_down_to_confirm_edit_n_your_personal_details">Please scroll down to confirm/edit\n your personal details</string>
    <string name="full_name">Full name in English</string>
    <string name="full_name_arabic">Full name in Arabic</string>
    <string name="national_number">National Number</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="city_of_birth">City of Birth</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="civil_record_number">Civil Record Number</string>
    <string name="id_card">ID Card Expiry Date</string>
    <string name="id_card_issuance_location">ID Card issuance location</string>
    <string name="blood_type">Blood Type</string>
    <string name="id_card_number">ID card number</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="scan">Scan</string>
    <string name="please_scan_the_front_side_of_your_national_id">Please scan the front side of your\n national ID</string>
    <string name="please_scan_the_back_side_of_your_national_id">Please scan the back side of your\n national ID</string>
    <string name="please_take_a_photo_selfie">Please take a photo \'selfie\'</string>
    <string name="capture">Capture</string>
    <string name="your_selfie_matches_your_id_picture">Your selfie matches your ID picture</string>
    <string name="please_enter_your_address_n_details_below">Please enter your address\n details below</string>
    <string name="please_enter_your_address_n_details_below_optional">Please enter your address\n details below(Optional)</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_name">Street Name</string>
    <string name="add_more_details_optional">Add more details (Optional)</string>
    <string name="po_box">P.O Box</string>
    <string name="postal_code">Postal Code</string>
    <string name="please_enter_your_payment_details_below">Please enter your employment details\n below</string>
    <string name="employpent_type">Employment type</string>
    <string name="profession">Profession</string>
    <string name="income_range">Income Range</string>
    <string name="do_you_carry_us">Dou you carry US citizenship?</string>
    <string name="us_tax_payer">Are you a US tax payer?</string>
    <string name="us_mailing_address">Dou you have a US mailing address?</string>
    <string name="us_green_card">Do you carry a US Green Card?</string>
    <string name="born_us">Where you born in the US?</string>
    <string name="what_is_your_preferred_account_type">What is your preferred account\n type?</string>
    <string name="current_account">Current Account</string>
    <string name="saving_account">Saving Account</string>
    <string name="what_is_your_preferred_currency_for_n_this_account">What is your preferred currency for\n this account?</string>
    <string name="jordanion_dinar">Jordanian dinar</string>
    <string name="us_dollar">US Dollar</string>
    <string name="euro">Euro</string>
    <string name="pound">Pound Sterling</string>
    <string name="abdaali_mall_branch">Abdali Mall Branch</string>
    <string name="abdoun_branch">Abdoun Branch</string>
    <string name="al_yasmeen_branch">Al Yasmeen Branch</string>
    <string name="dabouq_branch">Dabouq Branch</string>
    <string name="main_branch">Main Branch</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="dummy_terms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="i_agree">I Agree</string>
    <string name="your_ajib_mobile_username_is">Your AJIB mobile username is</string>
    <string name="_3938">3938</string>
    <string name="enter_password">Enter Password</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="would_you_like_to_use_face_id_touch_id_n_to_access_ajib_mobile">Would you like to use Face ID/Touch ID\n to access AJIB Mobile?</string>
    <string name="welcome_to_ajib">Welcome to AJIB</string>
    <string name="a_confirmation_will_all_n_details_has_been_sent_to_you">A confirmation will all\n details has been sent to you</string>
    <string name="account_number_87877">Account Number: 87877</string>
    <string name="login_page">Login Page</string>
    <string name="otp_fragment">otp_fragemnt</string>
    <string name="via">via</string>
    <string name="please_scan_your_us_passport">Please scan your US passport</string>
</resources>