<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.InputType" />


        <variable
            name="clickHandler"
            type="com.ajib.cbt.ui.fragments.createAccount.TermsFragment.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gStartOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gEndOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/dp30">


                <LinearLayout
                    android:id="@+id/lEmployeeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:paddingVertical="@dimen/dp15"
                        android:text="@string/terms_conditions"
                        android:textAppearance="@style/CitoTextAppearance.Basic" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="@dimen/dp10"
                        android:background="@color/greyColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="@dimen/dp20"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="start"
                        android:paddingVertical="@dimen/dp10"
                        android:text="@string/dummy_terms"
                        android:textAppearance="@style/CitoTextAppearance.Basic" />


                </LinearLayout>


                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/dp30"
                    android:onClick="@{()->clickHandler.onClickNext()}"
                    android:text="@string/i_agree"
                    app:layout_constraintTop_toBottomOf="@id/lEmployeeDetails"
                    app:layout_constraintEnd_toEndOf="@id/lEmployeeDetails"
                    app:layout_constraintStart_toStartOf="@id/lEmployeeDetails" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
