<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandler"
            type="com.ajib.cbt.ui.fragments.createAccount.TakeSelfieFragment.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gStartOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gEndOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/dp30">


                <LinearLayout
                    android:id="@+id/lMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp15"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dp10"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="@dimen/dp20"
                        android:text="@string/please_take_a_photo_selfie"
                        android:textAppearance="@style/CitoTextAppearance.Basic"
                       android:fontFamily="@font/open_sans_bold" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/clResult"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bNext"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/dp150"
                        android:id="@+id/ivDone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_baseline_check_circle_24"
                        android:layout_height="@dimen/dp150"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/sp_16"
                        app:layout_constraintTop_toBottomOf="@id/ivDone"
                        android:text="@string/your_selfie_matches_your_id_picture"
                        android:textAppearance="@style/CitoTextAppearance.Basic"
                        android:textStyle="bold" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/bNext"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/dp50"
                    android:text="@string/capture"
                    android:onClick="@{()->clickHandler.onClickNext()}"
                    app:layout_constraintEnd_toEndOf="@id/lMobileNumber"
                    app:layout_constraintStart_toStartOf="@id/lMobileNumber"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
