<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.InputType" />


        <variable
            name="clickHandler"
            type="com.ajib.cbt.ui.fragments.createAccount.CreatePasswordFragment.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gStartOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gEndOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/dp30">


                <LinearLayout
                    android:id="@+id/lEmployeeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp20"
                        android:text="@string/your_ajib_mobile_username_is"
                        android:textAppearance="@style/CitoTextAppearance.Basic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginBottom="@dimen/dp20"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:text="@string/_3938"
                        android:textAppearance="@style/CitoTextAppearance.Basic"
                        android:textColor="#B3AFAF"
                        android:textSize="@dimen/sp20" />

                </LinearLayout>




                <LinearLayout
                    android:id="@+id/lCreatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp30"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dp20"
                    app:layout_constraintTop_toBottomOf="@id/lEmployeeDetails">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dp20"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingStart="@dimen/dp5"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="Create Password"
                            app:layout_constraintEnd_toStartOf="@id/ivInfo"
                            android:textAppearance="@style/CitoTextAppearance.Basic"
                            android:fontFamily="@font/open_sans_bold" />

                        <ImageView
                            android:layout_width="@dimen/dp20"
                            android:id="@+id/ivInfo"
                            android:src="@drawable/ic_baseline_info_24"
                            app:tint="@color/colorPrimary"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginEnd="@dimen/dp10"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_height="@dimen/dp20"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <EditText
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp45"
                        android:maxLength="10"
                        android:paddingStart="@dimen/dp5"
                        android:padding="0dp"
                        android:hint="@string/enter_password"
                        android:inputType="number" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/greyColor" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginTop="@dimen/dp10"
                        android:paddingStart="@dimen/dp5"
                        android:text="Re-enter Password"
                        android:textAppearance="@style/CitoTextAppearance.Basic"
                        android:fontFamily="@font/open_sans_bold" />


                    <EditText
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp45"
                        android:maxLength="10"
                        android:paddingStart="@dimen/dp5"
                        android:padding="0dp"
                        android:hint="@string/enter_password"
                        android:inputType="number" />


                </LinearLayout>


                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/dp30"
                    android:onClick="@{()->clickHandler.onClickNext()}"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/lEmployeeDetails"
                    app:layout_constraintStart_toStartOf="@id/lEmployeeDetails" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
